--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -18,20 +18,35 @@
     "tag:offline": "cd ./api/tag && sls offline start --watch --port 3005 --skipCacheInvalidation",
     "user:deploy": "cd ./api/user && sls deploy",
     "user:offline": "cd ./api/user && sls offline start --watch --port 3006 --skipCacheInvalidation",
-    "ownership-relation:deploy": "cd ./api/ownership-relation && sls deploy",
-    "ownership-relation:offline": "cd ./api/ownership-relation && sls offline start --watch --port 3007 --skipCacheInvalidation",
-    "ownership-relation:test": "cd ./api/ownership-relation && mocha",
-    "ownership-relation:community-collection:deploy": "cd ./api/ownership-relation-2 && sls deploy",
-    "ownership-relation:community-collection:offline": "cd ./api/ownership-relation-2 && sls offline start --watch --port 3009 --skipCacheInvalidation",
-    "ownership-relation:community-collection:test": "cd ./api/ownership-relation-2 && mocha",
+    "ownership-relation:deploy": "npm run ownership-relation:community-resource:deploy && npm run ownership-relation:community-resource:deploy && npm run ownership-relation:community-tag:deploy && npm run ownership-relation:user-collection:deploy && npm run ownership-relation:user-community:deploy && npm run ownership-relation:user-resource:deploy && npm run ownership-relation:user-tag:deploy",
+    "ownership-relation:offline": "npm run ownership-relation:community-resource:offline & npm run ownership-relation:community-tag:offline & npm run ownership-relation:user-collection:offline & npm run ownership-relation:user-community:offline & npm run ownership-relation:user-resource:offline & npm run ownership-relation:user-tag:offline",
+    "ownership-relation:test": "npm run ownership-relation:community-resource:test && npm run ownership-relation:community-resource:test && npm run ownership-relation:community-tag:test && npm run ownership-relation:user-collection:test && npm run ownership-relation:user-community:test && npm run ownership-relation:user-resource:test && npm run ownership-relation:user-tag:test",
+    "ownership-relation:community-collection:deploy": "cd ./api/ownership-relation/community-collection && sls deploy",
+    "ownership-relation:community-collection:offline": "cd ./api/ownership-relation/community-collection && sls offline start --watch --port 3007 --skipCacheInvalidation",
+    "ownership-relation:community-collection:test": "cd ./api/ownership-relation/community-collection && mocha",
+    "ownership-relation:community-resource:deploy": "cd ./api/ownership-relation/community-resource && sls deploy",
+    "ownership-relation:community-resource:offline": "cd ./api/ownership-relation/community-resource && sls offline start --watch --port 3008 --skipCacheInvalidation",
+    "ownership-relation:community-resource:test": "cd ./api/ownership-relation/community-resource && mocha",
     "ownership-relation:community-tag:deploy": "cd ./api/ownership-relation/community-tag && sls deploy",
     "ownership-relation:community-tag:offline": "cd ./api/ownership-relation/community-tag && sls offline start --watch --port 3009 --skipCacheInvalidation",
     "ownership-relation:community-tag:test": "cd ./api/ownership-relation/community-tag && mocha",
+    "ownership-relation:user-collection:deploy": "cd ./api/ownership-relation/user-collection && sls deploy",
+    "ownership-relation:user-collection:offline": "cd ./api/ownership-relation/user-collection && sls offline start --watch --port 3010 --skipCacheInvalidation",
+    "ownership-relation:user-collection:test": "cd ./api/ownership-relation/user-collection && mocha",
+    "ownership-relation:user-community:deploy": "cd ./api/ownership-relation/user-community && sls deploy",
+    "ownership-relation:user-community:offline": "cd ./api/ownership-relation/user-community && sls offline start --watch --port 3011 --skipCacheInvalidation",
+    "ownership-relation:user-community:test": "cd ./api/ownership-relation/user-community && mocha",
+    "ownership-relation:user-resource:deploy": "cd ./api/ownership-relation/user-resource && sls deploy",
+    "ownership-relation:user-resource:offline": "cd ./api/ownership-relation/user-resource && sls offline start --watch --port 3012 --skipCacheInvalidation",
+    "ownership-relation:user-resource:test": "cd ./api/ownership-relation/user-resource && mocha",
+    "ownership-relation:user-tag:deploy": "cd ./api/ownership-relation/user-tag && sls deploy",
+    "ownership-relation:user-tag:offline": "cd ./api/ownership-relation/user-tag && sls offline start --watch --port 3013 --skipCacheInvalidation",
+    "ownership-relation:user-tag:test": "cd ./api/ownership-relation/user-tag && mocha",
     "webpack:clean": "rm -rf ../ressource-relation-api.webpack/",
     "database:clean": "sudo docker stop nrcanresourcetestdb && sudo docker rm nrcanresourcetestdb",
     "database:offline": "sudo docker run -p 3306:3306 --name nrcanresourcetestdb -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=test -e MYSQL_USER=root -d mysql:5",
     "database:offline:connect": "mysql -h 127.0.0.1 -P 3306 --protocol=tcp -u root -p",
-    "port:clean": "sudo fuser -k 3001/tcp & sudo fuser -k 3002/tcp & sudo fuser -k 3003/tcp & sudo fuser -k 3004/tcp & sudo fuser -k 3005/tcp & sudo fuser -k 3006/tcp & sudo fuser -k 3007/tcp & sudo fuser -k 3008/tcp"
+    "port:clean": "sudo fuser -k 3001/tcp && sudo fuser -k 3002/tcp && sudo fuser -k 3003/tcp && sudo fuser -k 3004/tcp && sudo fuser -k 3005/tcp && sudo fuser -k 3006/tcp && sudo fuser -k 3007/tcp && sudo fuser -k 3008/tcp && sudo fuser -k 3009/tcp && sudo fuser -k 3010/tcp && sudo fuser -k 3011/tcp  && sudo fuser -k 3012/tcp  && sudo fuser -k 3013/tcp"
   },
   "keywords": [],
   "author": "Pascal Vautour",
