--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -10,8 +10,18 @@
     "collection:offline": "cd ./api/collection && sls offline --watch --port 3001 start  --skipCacheInvalidation",
     "community:deploy": "cd ./api/community && sls deploy",
     "community:offline": "cd ./api/community && sls offline start --watch --port 3002 --skipCacheInvalidation",
-    "relation:deploy": "cd ./api/relation && sls deploy",
-    "relation:offline": "cd ./api/relation && sls offline start --watch --port 3003 --skipCacheInvalidation",
+    "relation:deploy": "npm run relation:collection-resource:deploy && npm run relation:community-community:deploy && npm run relation:community-user:deploy",
+    "relation:offline": "npm run relation:collection-resource:offline & npm run relation:community-community:offline & npm run relation:community-user:offline",
+    "relation:test": "npm run relation:collection-resource:test && npm run relation:community-community:test && npm run relation:community-user:test",
+    "relation:collection-resource:deploy": "cd ./api/relation/collection-resource && sls deploy",
+    "relation:collection-resource:offline": "cd ./api/relation/collection-resource && sls offline start --watch --port 3003 --skipCacheInvalidation",
+    "relation:collection-resource:test": "cd ./api/relation/collection-resource && mocha",
+    "relation:community-community:deploy": "cd ./api/relation/community-community && sls deploy",
+    "relation:community-community:offline": "cd ./api/relation/community-community && sls offline start --watch --port 3014 --skipCacheInvalidation",
+    "relation:community-community:test": "cd ./api/relation/community-community && mocha",
+    "relation:community-user:deploy": "cd ./api/relation/community-user && sls deploy",
+    "relation:community-user:offline": "cd ./api/relation/community-user && sls offline start --watch --port 3015 --skipCacheInvalidation",
+    "relation:community-user:test": "cd ./api/relation/community-user && mocha",
     "resource:deploy": "cd ./api/resource && sls deploy",
     "resource:offline": "cd ./api/resource && sls offline start --watch --port 3004 --skipCacheInvalidation",
     "tag:deploy": "cd ./api/tag && sls deploy",
@@ -46,7 +56,7 @@
     "database:clean": "sudo docker stop nrcanresourcetestdb && sudo docker rm nrcanresourcetestdb",
     "database:offline": "sudo docker run -p 3306:3306 --name nrcanresourcetestdb -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=test -e MYSQL_USER=root -d mysql:5",
     "database:offline:connect": "mysql -h 127.0.0.1 -P 3306 --protocol=tcp -u root -p",
-    "port:clean": "sudo fuser -k 3001/tcp && sudo fuser -k 3002/tcp && sudo fuser -k 3003/tcp && sudo fuser -k 3004/tcp && sudo fuser -k 3005/tcp && sudo fuser -k 3006/tcp && sudo fuser -k 3007/tcp && sudo fuser -k 3008/tcp && sudo fuser -k 3009/tcp && sudo fuser -k 3010/tcp && sudo fuser -k 3011/tcp  && sudo fuser -k 3012/tcp  && sudo fuser -k 3013/tcp"
+    "port:clean": "sudo fuser -k 3001/tcp && sudo fuser -k 3002/tcp && sudo fuser -k 3003/tcp && sudo fuser -k 3004/tcp && sudo fuser -k 3005/tcp && sudo fuser -k 3006/tcp && sudo fuser -k 3007/tcp && sudo fuser -k 3008/tcp && sudo fuser -k 3009/tcp && sudo fuser -k 3010/tcp && sudo fuser -k 3011/tcp  && sudo fuser -k 3012/tcp  && sudo fuser -k 3013/tcp && sudo fuser -k 3014/tcp && sudo fuser -k 3015/tcp"
   },
   "keywords": [],
   "author": "Pascal Vautour",
