collection-collection testing in place and naming fix

--- a/code/ressource-relation-api/package.json
+++ b/code/ressource-relation-api/package.json
@@ -10,15 +10,15 @@
     "collection:offline": "cd ./api/collection && sls offline --watch --port 3001 start  --skipCacheInvalidation",
     "community:deploy": "cd ./api/community && sls deploy",
     "community:offline": "cd ./api/community && sls offline start --watch --port 3002 --skipCacheInvalidation",
-    "relation:deploy": "npm run relation:collection-resource:deploy && npm run relation:community-community:deploy && npm run relation:community-user:deploy",
-    "relation:offline": "npm run relation:collection-resource:offline & npm run relation:community-community:offline & npm run relation:community-user:offline",
-    "relation:test": "npm run relation:collection-resource:test && npm run relation:community-community:test && npm run relation:community-user:test",
+    "relation:deploy": "npm run relation:collection-resource:deploy && npm run relation:collection-collection:deploy && npm run relation:community-user:deploy",
+    "relation:offline": "npm run relation:collection-resource:offline & npm run relation:collection-collection:offline & npm run relation:community-user:offline",
+    "relation:test": "npm run relation:collection-resource:test && npm run relation:collection-collection:test && npm run relation:community-user:test",
     "relation:collection-resource:deploy": "cd ./api/relation/collection-resource && sls deploy",
     "relation:collection-resource:offline": "cd ./api/relation/collection-resource && sls offline start --watch --port 3003 --skipCacheInvalidation",
     "relation:collection-resource:test": "cd ./api/relation/collection-resource && mocha",
-    "relation:community-community:deploy": "cd ./api/relation/community-community && sls deploy",
-    "relation:community-community:offline": "cd ./api/relation/community-community && sls offline start --watch --port 3014 --skipCacheInvalidation",
-    "relation:community-community:test": "cd ./api/relation/community-community && mocha",
+    "relation:collection-collection:deploy": "cd ./api/relation/collection-collection && sls deploy",
+    "relation:collection-collection:offline": "cd ./api/relation/collection-collection && sls offline start --watch --port 3014 --skipCacheInvalidation",
+    "relation:collection-collection:test": "cd ./api/relation/collection-collection && mocha",
     "relation:community-user:deploy": "cd ./api/relation/community-user && sls deploy",
     "relation:community-user:offline": "cd ./api/relation/community-user && sls offline start --watch --port 3015 --skipCacheInvalidation",
     "relation:community-user:test": "cd ./api/relation/community-user && mocha",
