ownership realtions and testing are now implemented

--- a/code/ressource-relation-api/.gitignore
+++ b/code/ressource-relation-api/.gitignore
@@ -6,7 +6,10 @@ jspm_packages
 .serverless
 
 # Environment Variables
-variables.env
+.env
 secrets*.json
+
+# Generated directories
+*.webpack
 
 .vscode
